--- a/client/src/app/components/account.component.html
+++ b/client/src/app/components/account.component.html
@@ -1,16 +1,19 @@
 <div class="container">
     <div class="row">
-        <div class="col-4">
-            <ul class="nav flex-column">
-                <li class="nav-item">
+        <div class="col-3">
+            <ul class="list-group">
+                <li class="list-group-item">
+
+                </li>
+                <li class="list-group-item">
                   <a class="nav-link" aria-current="page" routerLink="/acc/profile">Profile</a>
                 </li>
-                <li class="nav-item">
+                <li class="list-group-item">
                   <a class="nav-link" routerLink="/acc/saved">Bookmarks</a>
                 </li>
               </ul>
         </div>
-        <div class="col-8">
+        <div class="col-9">
             <router-outlet></router-outlet>
         </div>
     </div>
