--- a/client/src/app/components/place-details.component.html
+++ b/client/src/app/components/place-details.component.html
@@ -1,101 +1,161 @@
-
 <body>
-    <div class="container mb-3">
-        <div class="row">
-            <div class="col-12">
+    <div class="container mb-3 d-flex flex-column">
+        <div class="d-flex justify-content-start mt-2">
+            <div>
                 <h1> {{placeDetails.name}}</h1>
             </div>
-            <div class="col-12 h-40 w-100">
-                <img src="https://placehold.co/600x400" alt="">
+            <div>
+                <p class="card-text">
+                    <span [innerHTML]="placeDetails.rating | ratingIcon"></span>
+                    <span *ngIf="placeDetails.rating>0"> {{placeDetails.rating}}</span>
+                    <span>( {{placeDetails.numOfUserRating}}  ) </span>
+                  </p>
             </div>
-            <div class="col=12">
-                <br>
-                <h2>About</h2>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="row">
-                            <div class="col-5.5">
-                                <ul class="list-group list-group-flush">
-                                    <!-- ADDRESS -->
-                                    <li class="list-group-item">
-                                        {{placeDetails.address}}
-                                    </li>
-                                    <li class="list-group-item">
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M57.7 193l9.4 16.4c8.3 14.5 21.9 25.2 38 29.8L163 255.7c17.2 4.9 29 20.6 29 38.5v39.9c0 11 6.2 21 16 25.9s16 14.9 16 25.9v39c0 15.6 14.9 26.9 29.9 22.6c16.1-4.6 28.6-17.5 32.7-33.8l2.8-11.2c4.2-16.9 15.2-31.4 30.3-40l8.1-4.6c15-8.5 24.2-24.5 24.2-41.7v-8.3c0-12.7-5.1-24.9-14.1-33.9l-3.9-3.9c-9-9-21.2-14.1-33.9-14.1H257c-11.1 0-22.1-2.9-31.8-8.4l-34.5-19.7c-4.3-2.5-7.6-6.5-9.2-11.2c-3.2-9.6 1.1-20 10.2-24.5l5.9-3c6.6-3.3 14.3-3.9 21.3-1.5l23.2 7.7c8.2 2.7 17.2-.4 21.9-7.5c4.7-7 4.2-16.3-1.2-22.8l-13.6-16.3c-10-12-9.9-29.5 .3-41.3l15.7-18.3c8.8-10.3 10.2-25 3.5-36.7l-2.4-4.2c-3.5-.2-6.9-.3-10.4-.3C163.1 48 84.4 108.9 57.7 193zM464 256c0-36.8-9.6-71.4-26.4-101.5L412 164.8c-15.7 6.3-23.8 23.8-18.5 39.8l16.9 50.7c3.5 10.4 12 18.3 22.6 20.9l29.1 7.3c1.2-9 1.8-18.2 1.8-27.5zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"/></svg>
-                                        {{placeDetails.website}}
-                                    </li>
-                                    <li class="list-group-item">
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
-                                        {{placeDetails.phoneNo}}
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-6">
+            <div>
+                <p class="card-text">
+                    <span [innerHTML]="placeDetails.priceLevel| priceIcon"></span>
+                </p>
+            </div>
+            <div *ngIf="placeDetails.openNow; else closed">
+                Open Now
+            </div>
+        </div>
+        <div>
+            <img src="https://placehold.co/600x400" alt="">
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <!-- location & contact -->
+                <div class="card mb-3 mt-4">
+                    <div class="card-header">
+                        Location and Contact
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+                                {{placeDetails.address}}
+                            </li>
+                            <li class="list-group-item">
                                 <iframe
-                                    width="500"
+                                    width="450"
                                     height="350"
                                     style="border:1"
                                     loading="lazy"
                                     allowfullscreen
                                     referrerpolicy="no-referrer-when-downgrade"
                                     [src]='getGoogleMapUrl(placeDetails.placeId)|safe'>
-                                </iframe> 
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <br>
-                        <h2>Information</h2>
-                        <div class="col-4">
-                            <mat-list>
-                                <mat-list-item>
-                                    <span matListItemTitle>Opening Hours</span>
-                                    <span *ngFor="let o of placeDetails.opening_hours" matListItemLine>
-                                        {{o}}
-                                    </span>
-                                </mat-list-item>
-                            </mat-list>
-                        </div>
-                    </div>
-                    <div class="col=4">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                Dine-In: <svg xmlns="http://www.w3.org/2000/svg" height="1.25em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/></svg>
+                                </iframe>
                             </li>
                             <li class="list-group-item">
-                                Delivery: <svg xmlns="http://www.w3.org/2000/svg" height="1.25em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M57.7 193l9.4 16.4c8.3 14.5 21.9 25.2 38 29.8L163 255.7c17.2 4.9 29 20.6 29 38.5v39.9c0 11 6.2 21 16 25.9s16 14.9 16 25.9v39c0 15.6 14.9 26.9 29.9 22.6c16.1-4.6 28.6-17.5 32.7-33.8l2.8-11.2c4.2-16.9 15.2-31.4 30.3-40l8.1-4.6c15-8.5 24.2-24.5 24.2-41.7v-8.3c0-12.7-5.1-24.9-14.1-33.9l-3.9-3.9c-9-9-21.2-14.1-33.9-14.1H257c-11.1 0-22.1-2.9-31.8-8.4l-34.5-19.7c-4.3-2.5-7.6-6.5-9.2-11.2c-3.2-9.6 1.1-20 10.2-24.5l5.9-3c6.6-3.3 14.3-3.9 21.3-1.5l23.2 7.7c8.2 2.7 17.2-.4 21.9-7.5c4.7-7 4.2-16.3-1.2-22.8l-13.6-16.3c-10-12-9.9-29.5 .3-41.3l15.7-18.3c8.8-10.3 10.2-25 3.5-36.7l-2.4-4.2c-3.5-.2-6.9-.3-10.4-.3C163.1 48 84.4 108.9 57.7 193zM464 256c0-36.8-9.6-71.4-26.4-101.5L412 164.8c-15.7 6.3-23.8 23.8-18.5 39.8l16.9 50.7c3.5 10.4 12 18.3 22.6 20.9l29.1 7.3c1.2-9 1.8-18.2 1.8-27.5zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"/></svg>  &nbsp;{{placeDetails.website}}
+                            </li>
+                            <li class="list-group-item">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg> &nbsp;  {{placeDetails.phoneNo}}
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-8">
-                <h2>Reviews</h2>
-                <div class="container">
-                    <div class="row" *ngFor="let r of placeDetails.reviews">
-                        <div class="col-12">
-                            <div class="row">
-                                <div class="col-1">
-                                    <img src="{{r.profileUrl}}" class="profile-pic">
-                                </div>
-                                <div class="col-2">
-                                    <p>{{r.author}}</p>
-                                </div>
-                                <div class="col-2">
-                                    {{r.time}}
-                                </div>
+            <div class="col-6">
+                <!-- info -->
+                <div class="card mb-3 mt-4">
+                    <div class="card-header">
+                        Infomation
+                    </div>
+                    <div class="card-body">
+                       <div class="row">
+                            <div class="col-6">
+                                <mat-list>
+                                    <mat-list-item>
+                                        <span matListItemTitle>
+                                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"/></svg> &nbsp; Opening Hours</span>
+                                        <span *ngFor="let o of placeDetails.opening_hours" matListItemLine>
+                                            {{o}}
+                                        </span>
+                                    </mat-list-item>
+                                </mat-list>
                             </div>
-                        </div>
-                        <div class="col-12">
-                            <p><i>{{r.description}}</i></p>
+                            <div class="col-6">
+                                <mat-list>
+                                    <mat-list-item>
+                                        <span matListItemTitle>
+                                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M416 0C400 0 288 32 288 176V288c0 35.3 28.7 64 64 64h32V480c0 17.7 14.3 32 32 32s32-14.3 32-32V352 240 32c0-17.7-14.3-32-32-32zM64 16C64 7.8 57.9 1 49.7 .1S34.2 4.6 32.4 12.5L2.1 148.8C.7 155.1 0 161.5 0 167.9c0 45.9 35.1 83.6 80 87.7V480c0 17.7 14.3 32 32 32s32-14.3 32-32V255.6c44.9-4.1 80-41.8 80-87.7c0-6.4-.7-12.8-2.1-19.1L191.6 12.5c-1.8-8-9.3-13.3-17.4-12.4S160 7.8 160 16V150.2c0 5.4-4.4 9.8-9.8 9.8c-5.1 0-9.3-3.9-9.8-9L127.9 14.6C127.2 6.3 120.3 0 112 0s-15.2 6.3-15.9 14.6L83.7 151c-.5 5.1-4.7 9-9.8 9c-5.4 0-9.8-4.4-9.8-9.8V16zm48.3 152l-.3 0-.3 0 .3-.7 .3 .7z"/></svg> Options
+                                        </span>
+                                        <span>
+                                            Dine-In
+                                        </span>
+                                        <span>
+                                            Delivery
+                                        </span>
+                                        <span>
+                                            Takeout
+                                        </span>
+                                    </mat-list-item>
+                                </mat-list>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>    
+        <div>
+            <div class="card">
+                <div class="card-header">
+                    Meals:
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <mat-chip-listbox>
+                            <mat-chip>
+                                Breakfast <img matChipTrailingIcon [src]="checkIcon">
+                            </mat-chip>
+                            <mat-chip>
+                                Brunch <img matChipTrailingIcon [src]="checkIcon">
+                            </mat-chip>
+                            <mat-chip>
+                                Lunch <img matChipTrailingIcon [src]="checkIcon">
+                            </mat-chip>
+                            <mat-chip>
+                                Dinner <img matChipTrailingIcon [src]="checkIcon">
+                            </mat-chip>
+                            <mat-chip>
+                                Breakfast <img matChipTrailingIcon [src]="checkIcon">
+                            </mat-chip>
+                        </mat-chip-listbox>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <!-- Reviews -->
+            <h3>Reviews</h3>
+            <div class="row" *ngFor="let r of placeDetails.reviews">
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-1">
+                            <img src="{{r.profileUrl}}" class="profile-pic">
+                        </div>
+                        <div class="col-2">
+                            <p>{{r.author}}</p>
+                        </div>
+                        <div class="col-2">
+                            {{r.time}}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <p><i>{{r.description}}</i></p>
+                </div>
+            </div>
+        </div>
+    </div>            
 </body>
 
 <ng-template #closed>
     <p>Closed</p>
+</ng-template>
+
+<ng-template #checked>
+    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
 </ng-template>
