--- a/client/src/app/components/user-login-page.component.html
+++ b/client/src/app/components/user-login-page.component.html
@@ -84,7 +84,7 @@
   <div class="col-5 d-flex justify-content-center">
     <h1>Have No Account?</h1>
     <br>
-    <h1><a (click)="signup()">Sign Up Now</a></h1>
+    <a (click)="signup()"><h1>Sign Up Now</h1></a>
   </div>
 </ng-template>
     
