--- a/client/src/app/components/saved-result.component.html
+++ b/client/src/app/components/saved-result.component.html
@@ -8,7 +8,7 @@
           <div class="card-body" >
               <div class="row">
                 <div class="col-3" *ngFor="let r of c.restaurants">
-                  <mat-card (click)="onSelect()">
+                  <mat-card (click)="onSelect(r)">
                     <mat-card-header>
                       {{r.name}}
                     </mat-card-header>
