--- a/client/src/app/components/search-result.component.html
+++ b/client/src/app/components/search-result.component.html
@@ -139,8 +139,8 @@
 </ng-template>
 
 <ng-template #pleaseLogginIn>
-  <button  type="button" (click)="openDialogWithRef(firstDialog)">
-    <h2>+</h2>
+  <button mat-fab color="accent" type="button" (click)="openDialogWithRef(firstDialog)">
+    <mat-icon>bookmark</mat-icon>
   </button>
 </ng-template>
 
