--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -16,12 +16,11 @@
       </nav> 
   </header>
   <main>
-    <div class="main-body">
+    <div class="cotainer">
       <router-outlet></router-outlet>
     </div>
   </main>
   <footer>
-    my footer
   </footer>
 </body>
 
