--- a/client/src/app/components/saved-result.component.html
+++ b/client/src/app/components/saved-result.component.html
@@ -1,4 +1,4 @@
-<cdk-virtual-scroll-viewport cdkViewport style="height: 700px;" itemSize="100">
+<cdk-virtual-scroll-viewport cdkViewport style="height: 85vh;" itemSize="100">
   <div class="container">
       <div class="colbox" *ngFor="let c of collections">
         <div class="card">
