--- a/client/src/app/components/user-login-page.component.html
+++ b/client/src/app/components/user-login-page.component.html
@@ -2,7 +2,7 @@
     
 <main class="form-signin">
  <div class="container">
-  <div class="row justify-content-center">
+  <div class="row justify-content-center align-items-center">
     <!-- SIGN IN -->
     <div class="col-4">
       <form [formGroup]="LoginForm" (ngSubmit)="onSubmitLogin()">
