--- a/client/src/app/components/search-result.component.css
+++ b/client/src/app/components/search-result.component.css
@@ -5,12 +5,12 @@
   width: 70%;
   overflow: auto;
   height: 50%;
-  border-style: solid;
   background-color: white;
 }
 
 .container{
-  width: 100%
+  width: 100%;
+  height: 100%;
 }
 
 .img{
@@ -23,7 +23,6 @@
   justify-content: center;
   padding-top: 5%;
   background-color: whitesmoke;
-  border-style: solid;
 }
 
 .card-hover-effect {
@@ -49,4 +48,11 @@
 .filter-button{
   width: 100%;
   height: 3em;
+}
+
+.result{
+  width: 70%;
+}
+.filter{
+  width: 30%;
 }
