--- a/client/src/app/components/search-result.component.html
+++ b/client/src/app/components/search-result.component.html
@@ -1,133 +1,142 @@
 <body>
     <div class="container">
-      <div class="row">
-        <div class="col-4" style="border-style: solid;">
-          <div class="container d-flex justify-content-center flex-column">
-            <div style="padding-top: 100px;">
-              <h2>Filters</h2>
-            </div>
-            <div class="row">
-              <div class="col-8"> 
-                <button class="btn btn-labeled btn-outline-secondary filter-button mb-3"
-                (click)="toggleRating()">
-                  <div class="row">
-                    <div class="col-8">
-                      Rating
-                    </div>
-                    <div class="col-2">
-                      <ng-container *ngIf="filterRatingInc === true">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg>
-                      </ng-container>
-                      <ng-container *ngIf="filterRatingInc === false">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"/></svg>
-                      </ng-container>
-                      <ng-container *ngIf="filterRatingInc === null">
-                       
-                      </ng-container>
-                    </div>
-                  </div>                  
-                </button>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-8"> 
-                <button class="btn btn-labeled btn-outline-secondary filter-button" (click)="togglePrice()">
-                  <div class="row">
-                    <div class="col-8">
-                      Price Level
-                    </div>
-                    <div class="col-2">
-                      <ng-container *ngIf="filterPriceLvlInc==true">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg>
-                      </ng-container>
-                      <ng-container *ngIf="filterPriceLvlInc==false">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"/></svg>
-                      </ng-container>
-                      <ng-container *ngIf="filterPriceLvlInc==null">
-                        
-                      </ng-container>
-                    </div>
-                  </div>                  
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-8" style="border-style: solid;">
-          <div>
-            <small>
-              search result: {{nextPageToken? restaurants.length +' +':restaurants.length}}
-            </small>
-          </div>
-          <cdk-virtual-scroll-viewport cdkViewport style="height: 700px;" [itemSize]='itemSize'>
-            <div class="container d-flex flex-column">
-              <div class="card mb-2 card-hover-effect" *cdkVirtualFor="let r of sortedRestaurants">
+      <div class="d-flex justify-content-center align-items-center flex-row">
+        <div class="filter p-2 align-self-start mt-5">
+          <mat-card>
+            <mat-card-content>
+              <div class="container d-flex justify-content-center flex-column">
+                <div class="mb-3">
+                  <h2>Filters</h2>
+                </div>
                 <div class="row">
-                  <div class="col-md-4">
-                    <!-- <img src="../../assets/placeholder-image.jpg" class="img rounded-start"> -->
-                    <img src="{{r.photoRef | convert}}" class="img rounded-start">
-                  </div>
-                  <div class="col-md-6" (click)="onSelect(r)">
-                    <div class="card-body">
+                  <div class="col-8"> 
+                    <button class="btn btn-labeled btn-outline-secondary filter-button mb-3"
+                    (click)="toggleRating()">
                       <div class="row">
-                        <div class="col-10">
-                          <h3 class="card-title">
-                            {{ r.name }}
-                          </h3>
+                        <div class="col-8">
+                          Rating
                         </div>
-                      </div>
-                      <p class="card-text">
-                      <i>{{r.address}}</i>
-                      </p>
-                      <p class="card-text">
-                        <span [innerHTML]="r.rating | ratingIcon"></span>
-                        <span *ngIf="r.rating>0"> {{r.rating|number:'1.1-1'}} </span>
-                      </p>
-                      <div *ngIf="r.priceLevel>0">
-                        <p class="card-text">
-                          <span [innerHTML]="r.priceLevel| priceIcon"></span>
-                        </p>
-                      </div>
-                    </div>
+                        <div class="col-2">
+                          <ng-container *ngIf="filterRatingInc === true">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg>
+                          </ng-container>
+                          <ng-container *ngIf="filterRatingInc === false">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"/></svg>
+                          </ng-container>
+                          <ng-container *ngIf="filterRatingInc === null">
+                           
+                          </ng-container>
+                        </div>
+                      </div>                  
+                    </button>
                   </div>
-                  <div class="col-1" >
-                    &nbsp;
-                    <div class="mb-3" >
-                      <button  mat-fab color="accent" class="button" [matMenuTriggerFor]="menu" *ngIf="isLoggedIn; else pleaseLogginIn">
-                        <mat-icon>bookmark</mat-icon>
-                        <div>
-                          <mat-menu #menu="matMenu">
-                            <button mat-menu-item [matMenuTriggerFor]="collectionslist" *ngIf="collections.length>0; else pleaseCreate">
-                              <mat-icon>library_add</mat-icon>
-                              <span>Add to Collection</span>
-                            </button>
-                            <button mat-menu-item (click)="openDialog()">
-                              <mat-icon>create</mat-icon>
-                              <span>Create new Collection</span>
-                            </button>
-                          </mat-menu>
-                          
-                          <mat-menu #collectionslist="matMenu">
-                            <div>
-                              <mat-list role="list">
-                                <mat-list-item *ngFor="let col of collections" role="listitem" (click)="addToCollection(col,r)">
-                                  {{col.collectionName}}
-                                </mat-list-item>
-                              </mat-list>
-                            </div>
-                          </mat-menu>
+                </div>
+                <div class="row">
+                  <div class="col-8"> 
+                    <button class="btn btn-labeled btn-outline-secondary filter-button" (click)="togglePrice()">
+                      <div class="row">
+                        <div class="col-8">
+                          Price Level
                         </div>
-                      </button>
-                    </div>
+                        <div class="col-2">
+                          <ng-container *ngIf="filterPriceLvlInc==true">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg>
+                          </ng-container>
+                          <ng-container *ngIf="filterPriceLvlInc==false">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"/></svg>
+                          </ng-container>
+                          <ng-container *ngIf="filterPriceLvlInc==null">
+                            
+                          </ng-container>
+                        </div>
+                      </div>                  
+                    </button>
                   </div>
                 </div>
               </div>
-            </div>
-          </cdk-virtual-scroll-viewport>
+            </mat-card-content>
+          </mat-card>
+        </div>
+        <div class="result">
+          <mat-card>
+            <mat-card-header>
+              <div>
+                <mat-card-subtitle>
+                  search result: {{nextPageToken? restaurants.length +' +':restaurants.length}}
+                </mat-card-subtitle>
+              </div>
+            </mat-card-header>
+            <mat-card-content>
+              <cdk-virtual-scroll-viewport cdkViewport style="height: 85vh;" [itemSize]='itemSize'>
+                <div class="container d-flex flex-column">
+                  <div class="card mb-2 card-hover-effect" *cdkVirtualFor="let r of sortedRestaurants">
+                    <div class="row">
+                      <div class="col-md-4">
+                        <!-- <img src="../../assets/placeholder-image.jpg" class="img rounded-start"> -->
+                        <img src="{{r.photoRef |convert}}" class="img rounded-start">
+                      </div>
+                      <div class="col-md-6" (click)="onSelect(r)">
+                        <div class="card-body">
+                          <div class="row">
+                            <div class="col-10">
+                              <h3 class="card-title">
+                                {{ r.name }}
+                              </h3>
+                            </div>
+                          </div>
+                          <p class="card-text">
+                          <i>{{r.address}}</i>
+                          </p>
+                          <p class="card-text">
+                            <span [innerHTML]="r.rating | ratingIcon"></span>
+                            <span *ngIf="r.rating>0"> {{r.rating|number:'1.1-1'}} </span>
+                          </p>
+                          <div *ngIf="r.priceLevel>0">
+                            <p class="card-text">
+                              <span [innerHTML]="r.priceLevel| priceIcon"></span>
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-1" >
+                        &nbsp;
+                        <div class="mb-3" >
+                          <button  mat-fab color="accent" class="button" [matMenuTriggerFor]="menu" *ngIf="isLoggedIn; else pleaseLogginIn">
+                            <mat-icon>bookmark</mat-icon>
+                            <div>
+                              <mat-menu #menu="matMenu">
+                                <button mat-menu-item [matMenuTriggerFor]="collectionslist" *ngIf="collections.length>0; else pleaseCreate">
+                                  <mat-icon>library_add</mat-icon>
+                                  <span>Add to Collection</span>
+                                </button>
+                                <button mat-menu-item (click)="openDialog()">
+                                  <mat-icon>create</mat-icon>
+                                  <span>Create new Collection</span>
+                                </button>
+                              </mat-menu>
+                              
+                              <mat-menu #collectionslist="matMenu">
+                                <div>
+                                  <mat-list role="list">
+                                    <mat-list-item *ngFor="let col of collections" role="listitem" (click)="addToCollection(col,r)">
+                                      {{col.collectionName}}
+                                    </mat-list-item>
+                                  </mat-list>
+                                </div>
+                              </mat-menu>
+                            </div>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </cdk-virtual-scroll-viewport>
+            </mat-card-content>
+          </mat-card>
         </div>
       </div>
     </div>
-  
 </body>
 
 <ng-template #pleaseCreate>
@@ -157,7 +166,3 @@
     <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"/></svg>
   </div>
 </ng-template>
-
-<div class="col-2" #pricelvlDec>
-  <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"/></svg>
-</div>
