--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -24,10 +24,14 @@ body{
 main{
     margin-top: 60px;
     height: 100%;
-    background-color: azure;
-    border-style: solid;
+    border: solid red;
     overflow:auto;
     padding-bottom:150px;
+    
+}
+
+.router{
+    height: 100%;
 }
 
 header{
@@ -44,7 +48,18 @@ header{
     clear:both;
     padding-top:20px;
     background-color: #FFD966;
-  } 
+}
 
-
+.input-field{
+    border: none;
+    border-bottom: 1px solid black;
+    outline: none;
+    width: 300px;
+    height: 30px;
+    background-color: inherit;
+  }
+  
+  .input-field:focus {
+    border-bottom: 2px solid blue;
+  }
 
