--- a/client/src/app/components/search.component.css
+++ b/client/src/app/components/search.component.css
@@ -2,24 +2,11 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh;
-}
-
-.dropdown-menu li {
-    position: relative;
-    }
-    .dropdown-menu .dropdown-submenu {
-    display: none;
-    position: absolute;
-    left: 100%;
-    top: -7px;
-    }
-    .dropdown-menu .dropdown-submenu-left {
-    right: 100%;
-    left: auto;
-    }
-    .dropdown-menu > li:hover > .dropdown-submenu {
-    display: block;
+    height: fill;
+    background-image: url(../../assets/SearchBgImg.jpeg);
+    background-size: cover;
+    background-position: center;
+    border: solid green;
 }
 
 .form-control{
@@ -39,9 +26,8 @@ body{
 
 .searchbox{
     width: 100%;
-    /* border-style: solid; */
 }
 
 .title{
-    /* border-style: solid; */
+    color: white;
 }
