--- a/client/src/app/components/user-login-page.component.css
+++ b/client/src/app/components/user-login-page.component.css
@@ -5,8 +5,7 @@ body {
 body {
   display: flex;
   align-items: center;
-
-  background-color: #f5f5f5;
+  height: 100%;
 }
 
 .form-signin {
@@ -16,18 +15,37 @@ body {
   margin: auto;
 }
 
-/* .form-signin .form-floating:focus-within {
-  z-index: 2;
-} */
-
-/* .form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+.form-input{
+  width: 510px;
 }
 
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-} */
+.login-form-field{
+  width: 400px;
+}
+
+.input-field{
+  border: none;
+  border-bottom: 1px solid black;
+  outline: none;
+  width: 300px;
+  height: 40px;
+}
+
+.input-field:focus {
+  border-bottom: 2px solid blue;
+}
+
+.regform{
+  height: 500px;
+}
+
+.loginform{
+  height: 500px;
+}
+
+.vl {
+  border-left: 3px solid lightgrey;
+  height: 500px;
+  margin-left: 2px;
+  margin-right: 2px;
+}
