--- a/client/src/app/components/user-login-page.component.html
+++ b/client/src/app/components/user-login-page.component.html
@@ -2,78 +2,100 @@
     
 <main class="form-signin">
  <div class="container">
-  <div class="row justify-content-center align-items-center">
+  <div class="d-flex flex-row justify-content-center">
     <!-- SIGN IN -->
-    <div class="col-4">
+    <div class="col-4 align-self-center loginform mt-5">
       <form [formGroup]="LoginForm" (ngSubmit)="onSubmitLogin()">
-        <h1 class="h3 mb-3 fw-normal">Sign In</h1>
-
-        <div *ngIf="!LoginStatus">
-          {{LoginMessage}}
-        </div>
-    
-        <div class="form-floating mb-3">
-          <input type="email" class="form-control" placeholder="name@example.com" formControlName="email">
-          <label for="floatingInput">Email address</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input type="password" class="form-control" placeholder="Password" formControlName="password">
-          <label for="floatingPassword">Password</label>
-        </div>
-       
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <mat-card>
+          <mat-card-content>
+            <div class="d-flex justify-content-center" >
+              <div class="d-flex flex-column align-items-start mb-3">
+                <div class="align-self-center">
+                  <h1>Sign In</h1>
+                </div>
+                <div *ngIf="!LoginStatus">
+                  {{LoginMessage}}
+                </div>
+                <div>
+                  <mat-icon> person_pin</mat-icon>
+                </div>
+                <div class="mt-3">
+                  <input type="email" class="input-field" placeholder="Email" formControlName="email">
+                </div>
+                <div class="mt-3">
+                  <mat-icon>lock</mat-icon>
+                </div>
+                <div class="mt-3">
+                  <input type="password" class="input-field" placeholder="Password" formControlName="password">
+                </div>
+                <div class="mt-3">
+                  <button mat-raised-button color="primary" type="submit" [disabled]="LoginForm.invalid">Sign in</button>
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
       </form>
     </div>
-
     <!-- REGISTER -->
-    <div class="col-5" *ngIf="signUp; else SignUpNow">
+    <div class="col-6 regform ms-1" *ngIf="signUp; else SignUpNow">
       <form [formGroup]="RegisterForm" (ngSubmit)="onSubmitReg()">
-        <h1 class="h3 mb-3 fw-normal">Register</h1>
-    
-        <div class="row justify-content-around">
-          <div class="col-5">
-            <div class="form-floating mb-3">
-              <input type="text" class="form-control" placeholder="First Name" formControlName="firstName">
-              <label for="floatingInput">First Name</label>
+        <mat-card >
+          <mat-card-header>
+            <div class="align-items-center">
+              <mat-card-title >
+                <h2>Register Here</h2>
+              </mat-card-title>
             </div>
-          </div>
-          <div class="col-5">
-            <div class="form-floating">
-              <input type="email" class="form-control" placeholder="Last Name" formControlName="lastName">
-              <label for="floatingInput">Last Name</label>
-            </div>
-          </div>
-        </div>
-
-        <div class="row justify-content-center" >
-          <div class="col-11">
-            <div *ngIf="!RegStatus">
-              {{RegMessage}}
-            </div>
-            <div class="form-floating mb-3">
-              <input type="email" class="form-control" placeholder="Last Name" formControlName="email">
-              <label for="floatingInput">Email</label>
-            </div>
-          </div>
-          <div class="col-11">
-            <div class="form-floating mb-3">
-              <input type="password" class="form-control" placeholder="Last Name" formControlName="password">
-              <label for="floatingInput">Password</label>
-            </div>
-          </div>
-          <div class="col-11">
-            <div class="form-floating mb-3">
-              <input type="password" class="form-control" placeholder="Last Name" formControlName="confirmPassword">
-              <label for="floatingInput">Re-Enter Password</label>
-            </div>
-          </div>
-
-          <div class="col-11">
-            <button class="w-100 btn btn-lg btn-primary"  type="submit" [disabled]="isFormInvalid()">Register</button>
-          </div>
-
-        </div>
-
+          </mat-card-header>
+          <mat-card-content>
+           <div class="d-flex justify-content-center">
+            <div class="d-flex flex-column align-items-start">
+              <div class="mt-4">
+                <mat-form-field appearance="outline">
+                  <mat-label>First Name</mat-label>
+                    <input matInput placeholder="Placeholder" formControlName="firstName">
+                    <mat-icon matSuffix>account_circle</mat-icon>
+                    <mat-hint *ngIf="RegisterForm.get('firstName')!.invalid && RegisterForm.get('firstName')!.touched">You must enter a value</mat-hint>
+                </mat-form-field>
+                <mat-form-field class="ms-3" appearance="outline">
+                  <mat-label>Last Name</mat-label>
+                    <input matInput placeholder="Placeholder" formControlName="lastName">
+                    <mat-icon matSuffix>account_circle</mat-icon>
+                    <mat-hint *ngIf="RegisterForm.get('lastName')!.invalid && RegisterForm.get('lastName')!.touched">You must enter a value</mat-hint>
+                </mat-form-field>
+              </div>
+              <div>
+                <mat-form-field appearance="outline" class="form-input mt-2">
+                  <mat-label>Email</mat-label>
+                    <input matInput placeholder="Placeholder" formControlName="email">
+                    <mat-icon matSuffix>email</mat-icon>
+                    <mat-hint *ngIf="RegisterForm.get('email')!.invalid && RegisterForm.get('email')!.touched">Please enter a valid email</mat-hint>
+                </mat-form-field>
+              </div>
+              <div>
+                <mat-form-field appearance="outline" class="form-input mt-2">
+                  <mat-label>Password</mat-label>
+                    <input matInput placeholder="Placeholder" formControlName="password">
+                    <mat-icon matSuffix> vpn_key</mat-icon>
+                    <mat-hint *ngIf="RegisterForm.get('password')!.invalid && RegisterForm.get('password')!.touched">must have at least 8 char</mat-hint>
+                </mat-form-field>
+              </div>
+              <div>
+                <mat-form-field appearance="outline" class="form-input mt-2">
+                  <mat-label>Re-Enter Password</mat-label>
+                    <input matInput placeholder="Placeholder" formControlName="confirmPassword">
+                    <mat-icon matSuffix>vpn_key</mat-icon>
+                    <mat-hint *ngIf="RegisterForm.get('confirmPassword')!.invalid && RegisterForm.get('confirmPassword')!.touched">{{getErrorMsg()}} </mat-hint>
+                </mat-form-field>
+              </div>
+              <div class="align-self-center">
+                <button type="submit" mat-raised-button color="primary" [disabled]="isFormInvalid()">Submit</button>
+              </div>
+             </div>
+           </div>
+          </mat-card-content>
+        </mat-card>
       </form>
     </div>
   </div>
@@ -81,10 +103,10 @@
 </main>
 
 <ng-template #SignUpNow>
-  <div class="col-5 d-flex justify-content-center">
-    <h1>Have No Account?</h1>
-    <br>
-    <a (click)="signup()"><h1>Sign Up Now</h1></a>
+  <div class="col-6 d-flex justify-content-center regform mt-5 ms-1">
+    <div class="mt-5">
+      <h1>Have No Account?</h1> <a (click)="signup()"><h1>Sign Up Now</h1></a>
+    </div>
   </div>
 </ng-template>
     
