--- a/client/src/app/components/user-login-page.component.html
+++ b/client/src/app/components/user-login-page.component.html
@@ -28,7 +28,7 @@
                 <div class="mt-3">
                   <input type="password" class="input-field" placeholder="Password" formControlName="password">
                 </div>
-                <div class="mt-3">
+                <div class="mt-3 align-self-center">
                   <button mat-raised-button color="primary" type="submit" [disabled]="LoginForm.invalid">Sign in</button>
                 </div>
               </div>
