--- a/client/src/app/components/saved-result.component.html
+++ b/client/src/app/components/saved-result.component.html
@@ -2,7 +2,7 @@
   <div class="container">
       <div class="colbox" *ngFor="let c of collections">
         <div class="card">
-          <div class="card-title mb-3">
+          <div class="card-title m-3">
             <i>{{c.collectionName}}</i>
           </div>
           <div class="card-body" >
