--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -22,7 +22,7 @@
       </nav> 
   </header>
   <main>
-      <app-place-details></app-place-details>
+      <router-outlet></router-outlet>
   </main>
   <footer class="footer">
    <div class="align-self-end">
