--- a/client/src/app/components/img-slider.component.html
+++ b/client/src/app/components/img-slider.component.html
@@ -5,14 +5,12 @@
     </div>
     <div
       class="slide"
-      [ngStyle]="{ 'background-image': getCurrentSlideUrl() }"
+      [ngStyle]="{ 'background-image': 'url(' + (getCurrentSlideUrl()| convert) +')'}"
     ></div>
     <div class="dotsContainer">
-      <div
-        *ngFor="let slide of slides; let slideIndex = index"
+      <div *ngFor="let slide of slides; let slideIndex = index"
         class="dot"
-        (click)="goToSlide(slideIndex)"
-      >
+        (click)="goToSlide(slideIndex)">
         ●
       </div>
     </div>
