--- a/client/src/app/components/search-result.component.html
+++ b/client/src/app/components/search-result.component.html
@@ -101,7 +101,7 @@
                       <div class="col-1" >
                         &nbsp;
                         <div class="mb-3" >
-                          <button  mat-fab color="accent" class="button" [matMenuTriggerFor]="menu" *ngIf="isLoggedIn; else pleaseLogginIn">
+                          <button  mat-fab color="white" class="button" [matMenuTriggerFor]="menu" *ngIf="isLoggedIn; else pleaseLogginIn">
                             <mat-icon>bookmark</mat-icon>
                             <div>
                               <mat-menu #menu="matMenu">
