--- a/client/src/app/components/profile.component.html
+++ b/client/src/app/components/profile.component.html
@@ -1,54 +1,54 @@
-<div class="container mb-3">
-   <form [formGroup]="pForm">
-        <div class="row">
-            <div class="col-4">
-                <h2>My Profile</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-4">
-                <div class="mb-3">
-                    <label class="form-label">First Name</label>
-                    <input type="text" class="form-control" formControlName="firstName" 
-                    placeholder="{{currentUser.firstName}}">
+<body>
+    <div class="container mb-3">
+        <form [formGroup]="pForm" (ngSubmit)="onSubmit()">
+         <div class="card">
+             <div class="card-header">
+                 Account Details
+             </div>
+             <div class="card-body">
+                 <div class="mb-3">
+                     <label class="small mb-1" for="email">Email</label>
+                     <input class="form-control" id="email" type="email"  formControlName="email">
+                 </div>
+                 <div class="row gx-3 mb-3">
+                     <div class="col-md-6">
+                         <label class="small mb-1" for="inputFirstName">First name</label>
+                         <input class="form-control" id="inputFirstName" type="text" formControlName="firstName">
+                     </div>
+                     <div class="col-md-6">
+                         <label class="small mb-1" for="inputLastName">Last name</label>
+                         <input class="form-control" id="inputLastName" type="text" formControlName="lastName">
+                     </div>
+                 </div>
+                 <div class="mb-3">
+                    <label class="small mb-1" for="inputPw">Password</label>
+                    <input class="form-control" id="inputPw" type="password" formControlName="newPassword">
                 </div>
-            </div>
-            <div class="col-4">
-                <div class="mb-3">
-                    <label class="form-label">Last Name</label>
-                    <input type="text" class="form-control" formControlName="lastName" placeholder="{{currentUser.lastName}}">
+                <div>
+                    <button class="btn btn-primary" type="button" [disabled]="isFormInvalid()" (click)="update()">Update Profile</button>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-5">
-                <div class="mb-3">
-                    <label class="form-label">Old Password</label>
-                    <input type="password" class="form-control" formControlName="oldPassword">
+             </div>
+         </div>
+        <div *ngIf="enterPw">
+            <div class="card mt-3">
+                <div class="card-body">
+                    <div class="row gx-3 mb-3">
+                        <div class="col-md-6">
+                            <label class="small mb-1" for="oldPw">Old Password</label>
+                            <input class="form-control" id="oldPw" type="password" formControlName="oldPassword">
+                        </div>
+                        <div class="col-md-6">
+                            <label class="small mb-1" for="oldPwMatch">Enter Old Password Again</label>
+                            <input class="form-control" id="oldPwMatch" type="password" formControlName="oldPasswordCheck">
+                        </div>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary" type="submit" [disabled]="pForm.invalid">Submit</button>
+                    </div>
                 </div>
-            </div>
+             </div>
         </div>
-        <div class="row">
-            <div class="col-5">
-                <div class="mb-3">
-                    <label class="form-label">New Password</label>
-                    <input type="password" class="form-control" formControlName="oldPasswordCheck">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-5">
-                <div class="mb-3">
-                    <label class="form-label">Re-Enter New Password</label>
-                    <input type="password" class="form-control" formControlName="newPassword">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-5">
-                <button class="btn" type="submit">Updated Profile</button>
-            </div>
-        </div>
-   </form>
-</div>
+        </form>
+    </div>
+</body>
 
