--- a/client/src/app/components/account.component.html
+++ b/client/src/app/components/account.component.html
@@ -1,9 +1,9 @@
-<div class="container">
-    <div class="row">
+<div class="container justify-content-around">
+    <div class="row mt-3">
         <div class="col-3">
             <ul class="list-group">
                 <li class="list-group-item">
-
+                  <img src="../../assets/profile-icon.png" class="profile">
                 </li>
                 <li class="list-group-item">
                   <a class="nav-link" aria-current="page" routerLink="/acc/profile">Profile</a>
@@ -11,7 +11,7 @@
                 <li class="list-group-item">
                   <a class="nav-link" routerLink="/acc/saved">Bookmarks</a>
                 </li>
-              </ul>
+            </ul>
         </div>
         <div class="col-9">
             <router-outlet></router-outlet>
