--- a/client/src/app/components/profile.component.css
+++ b/client/src/app/components/profile.component.css
@@ -3,9 +3,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: solid;
 }
 
 .card{
-    width: 50%;
+    width: 100%;
+}
+
+.container{
+    width: 80%;
 }
