--- a/client/src/app/components/place-details.component.html
+++ b/client/src/app/components/place-details.component.html
@@ -181,6 +181,9 @@
                                 <p>{{r.author}}</p>
                             </div>
                             <div class="col-2">
+                                Rating: {{r.rating}}
+                            </div>
+                            <div class="col-2">
                                 {{r.time}}
                             </div>
                         </div>
