--- a/client/src/app/components/search-result.component.html
+++ b/client/src/app/components/search-result.component.html
@@ -66,73 +66,75 @@
                 </mat-card-subtitle>
               </div>
             </mat-card-header>
-            <mat-card-content>
-              <cdk-virtual-scroll-viewport cdkViewport style="height: 85vh;" [itemSize]='itemSize'>
-                <div class="container d-flex flex-column">
-                  <div class="card mb-2 card-hover-effect" *cdkVirtualFor="let r of sortedRestaurants">
-                    <div class="row">
-                      <div class="col-md-4">
-                        <!-- <img src="../../assets/placeholder-image.jpg" class="img rounded-start"> -->
-                        <img src="{{r.photoRef |convert}}" class="img rounded-start">
-                      </div>
-                      <div class="col-md-6" (click)="onSelectRes(r)">
-                        <div class="card-body">
-                          <div class="row">
-                            <div class="col-10">
-                              <h3 class="card-title">
-                                {{ r.name }}
-                              </h3>
+            <div *ngIf="restaurants; else noResultFound">
+              <mat-card-content>
+                <cdk-virtual-scroll-viewport cdkViewport style="height: 85vh;" [itemSize]='itemSize'>
+                  <div class="container d-flex flex-column">
+                    <div class="card mb-2 card-hover-effect" *cdkVirtualFor="let r of sortedRestaurants">
+                      <div class="row">
+                        <div class="col-md-4">
+                          <!-- <img src="../../assets/placeholder-image.jpg" class="img rounded-start"> -->
+                          <img src="{{r.photoRef |convert}}" class="img rounded-start">
+                        </div>
+                        <div class="col-md-6" (click)="onSelectRes(r)">
+                          <div class="card-body">
+                            <div class="row">
+                              <div class="col-10">
+                                <h3 class="card-title">
+                                  {{ r.name }}
+                                </h3>
+                              </div>
                             </div>
-                          </div>
-                          <p class="card-text">
-                          <i>{{r.address}}</i>
-                          </p>
-                          <p class="card-text">
-                            <span [innerHTML]="r.rating | ratingIcon"></span>
-                            <span *ngIf="r.rating>0"> {{r.rating|number:'1.1-1'}} </span>
-                          </p>
-                          <div *ngIf="r.priceLevel>0">
                             <p class="card-text">
-                              <span [innerHTML]="r.priceLevel| priceIcon"></span>
+                            <i>{{r.address}}</i>
                             </p>
+                            <p class="card-text">
+                              <span [innerHTML]="r.rating | ratingIcon"></span>
+                              <span *ngIf="r.rating>0"> {{r.rating|number:'1.1-1'}} </span>
+                            </p>
+                            <div *ngIf="r.priceLevel>0">
+                              <p class="card-text">
+                                <span [innerHTML]="r.priceLevel| priceIcon"></span>
+                              </p>
+                            </div>
                           </div>
                         </div>
-                      </div>
-                      <div class="col-1" >
-                        &nbsp;
-                        <div class="mb-3" >
-                          <button  mat-fab color="white" class="button" [matMenuTriggerFor]="menu" *ngIf="isLoggedIn; else pleaseLogginIn">
-                            <mat-icon>bookmark</mat-icon>
-                            <div>
-                              <mat-menu #menu="matMenu">
-                                <button mat-menu-item [matMenuTriggerFor]="collectionslist" *ngIf="!collectionsEmpty; else pleaseCreate">
-                                  <mat-icon>library_add</mat-icon>
-                                  <span>Add to Collection</span>
-                                </button>
-                                <button mat-menu-item (click)="openDialog()">
-                                  <mat-icon>create</mat-icon>
-                                  <span>Create new Collection</span>
-                                </button>
-                              </mat-menu>
-                              
-                              <mat-menu #collectionslist="matMenu">
-                                <div>
-                                  <mat-list role="list">
-                                    <mat-list-item *ngFor="let col of collections" role="listitem" (click)="addToCollection(col,r)">
-                                      {{col.collectionName}}
-                                    </mat-list-item>
-                                  </mat-list>
-                                </div>
-                              </mat-menu>
-                            </div>
-                          </button>
+                        <div class="col-1" >
+                          &nbsp;
+                          <div class="mb-3" >
+                            <button  mat-mini-fab	 color="white" class="button" [matMenuTriggerFor]="menu" *ngIf="isLoggedIn; else pleaseLogginIn">
+                              <mat-icon>bookmark</mat-icon>
+                              <div>
+                                <mat-menu #menu="matMenu">
+                                  <button mat-menu-item [matMenuTriggerFor]="collectionslist" *ngIf="!collectionsEmpty; else pleaseCreate">
+                                    <mat-icon>library_add</mat-icon>
+                                    <span>Add to Collection</span>
+                                  </button>
+                                  <button mat-menu-item (click)="openDialog()">
+                                    <mat-icon>create</mat-icon>
+                                    <span>Create new Collection</span>
+                                  </button>
+                                </mat-menu>
+                                
+                                <mat-menu #collectionslist="matMenu">
+                                  <div>
+                                    <mat-list role="list">
+                                      <mat-list-item *ngFor="let col of collections" role="listitem" (click)="addToCollection(col,r)">
+                                        {{col.collectionName}}
+                                      </mat-list-item>
+                                    </mat-list>
+                                  </div>
+                                </mat-menu>
+                              </div>
+                            </button>
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-              </cdk-virtual-scroll-viewport>
-            </mat-card-content>
+                </cdk-virtual-scroll-viewport>
+              </mat-card-content>
+            </div>
           </mat-card>
         </div>
       </div>
@@ -148,7 +150,7 @@
 </ng-template>
 
 <ng-template #pleaseLogginIn>
-  <button mat-fab color="accent" type="button" (click)="openDialogWithRef(firstDialog)">
+  <button mat-mini-fab color="white" type="button" (click)="openDialogWithRef(firstDialog)">
     <mat-icon>bookmark</mat-icon>
   </button>
 </ng-template>
@@ -165,4 +167,8 @@
   <div class="col-2" >
     <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 320 512"><path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"/></svg>
   </div>
+</ng-template>
+
+<ng-template #noResultFound>
+  <h2>No Result Found</h2>
 </ng-template>
